2008-06-04  Zoltan Varga  <vargaz@gmail.com>

	* decimal.c (rescale128): Rework the code a bit so it no longer crashes the
	class library tests.

	* icall.c (ves_icall_InternalInvoke): Applied patch from Andy Hume 
	(andyhume32@yahoo.co.uk). Add more useful exception messages. Fixes
	#396989.

2008-06-04  Mark Probst  <mark.probst@gmail.com>

	* domain.c, domain-internals.h: The JIT infos are now freed by the
	JIT info table code.  They are freed immediately if there only a
	single JIT info table in circulation.  If there is more, the free
	is delayed via a queue.

	* threads.c, threads-types.h: New hazard pointer function for
	freeing all freeable delayed items in one sitting.

2008-06-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (typebuilder_setup_fields): Use mempool for allocations.

	* reflection.c (typebuilder_setup_properties): Same.

	* reflection.c (typebuilder_setup_events): Same.

2008-06-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (mono_custom_attrs_from_builders): Receive a MonoMemPool
	and use it for allocating memory.

	* reflection.c (mono_marshal_spec_from_builder): Same.

	* reflection.c: Change code to use new signatures.

	* metadata.c (mono_metadata_type_dup): Add a FIXME note.

2008-06-03  Zoltan Varga  <vargaz@gmail.com>

	* decimal.c (rescale128): Put back one line which was accidently commented
	out.
	
	* decimal.c (rescale128): Disable the code added by the last patch, as it seems
	to cause crashes.

2008-06-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (mono_reflection_generic_class_initialize): Name must
	be always malloc'ed so we can free it later on. Do this for field, property
	and event.

	* metadata.c (free_generic_class): Free field, property and event names.

2008-06-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (fieldbuilder_to_mono_class_field): Use mono_metadata_type_dup
	instead of g_memdup.

	* reflection.c (typebuilder_setup_fields): Same.
